--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -12,7 +12,7 @@
     android:layout_marginTop="8dp"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?attr/selectableItemBackground"
+    android:foreground="?android:attr/selectableItemBackground"
     app:cardElevation="2dp"
     app:cardCornerRadius="2dp">
 
