--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -127,6 +127,7 @@
 
             <include layout="@layout/card_calendar_option"/>
             <include layout="@layout/card_enrollment_download"/>
+            <include android:visibility="gone" tools:visibility="visible" layout="@layout/card_big_tray"/>
             <include android:visibility="gone" tools:visibility="visible" layout="@layout/card_update_control"/>
             <include android:visibility="gone" tools:visibility="visible" layout="@layout/card_good_barrel"/>
 
