--- a/app/src/main/res/layout/fragment_schedule_new.xml
+++ b/app/src/main/res/layout/fragment_schedule_new.xml
@@ -21,13 +21,29 @@
                 android:layout_margin="4dp"
                 app:cardElevation="2dp"
                 app:cardCornerRadius="2dp">
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recycler_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="8dp"
-                    android:clipToPadding="false">
-                </android.support.v7.widget.RecyclerView>
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/recycler_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="8dp"
+                        android:clipToPadding="false">
+                    </android.support.v7.widget.RecyclerView>
+
+                    <Button
+                        android:id="@+id/btn_export_google_calendar"
+                        android:layout_below="@id/recycler_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="@string/export_to_calendar"
+                        style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginRight="8dp"/>
+                </RelativeLayout>
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.RecyclerView
