--- a/app/src/main/res/xml-v26/preferences.xml
+++ b/app/src/main/res/xml-v26/preferences.xml
@@ -68,6 +68,18 @@
             android:defaultValue="false"
             android:summaryOff="@string/new_schedule_layout_disabled"
             android:summaryOn="@string/new_schedule_layout_enabled"/>
+
+        <Preference
+            android:icon="@drawable/ic_calendar_range_accent_30dp"
+            android:key="export_to_google_calendar"
+            android:title="@string/export_classes_to_google_calendar"
+            android:summary="@string/export_classes_to_google_calendar_desc"/>
+
+        <Preference
+            android:icon="@drawable/ic_calendar_remove_accent_30dp"
+            android:key="reset_calendar_export"
+            android:title="@string/remove_google_calendar_export"
+            android:summary="@string/remove_google_calendar_export_desc"/>
     </PreferenceCategory>
 
     <PreferenceCategory
