--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorPrimary">
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,11 +22,30 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp">
 
-            <de.hdodenhof.circleimageview.CircleImageView
+            <RelativeLayout
                 android:layout_width="0dp"
                 android:layout_height="120dp"
-                android:layout_weight=".4"
-                android:src="@drawable/ic_unes_large_image_512"/>
+                android:layout_weight=".4">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/iv_img_placeholder"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_unes_large_image_512"
+                    android:visibility="invisible"
+                    tools:visibility="visible"
+                    android:focusable="true"
+                    android:clickable="true"/>
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/iv_img_profile"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_unes_large_image_512"
+                    android:visibility="invisible"
+                    android:focusable="true"
+                    android:clickable="true"/>
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/tv_std_name"
