--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -7,18 +7,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.forcetower.uefs.view.about.AboutActivity">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        app:contentInsetStart="72dp"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:fitsSystemWindows="true"
-        android:clipToPadding="false"
-        android:background="@color/colorPrimary"
-        app:layout_scrollFlags="scroll|enterAlways" />
+    <include
+        android:id="@+id/inc_toolbar"
+        layout="@layout/toolbar"/>
 
     <ScrollView
-        android:layout_below="@id/toolbar"
+        android:layout_below="@id/inc_toolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -44,7 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:layout_margin="8dp"
-                android:background="@color/colorAccent"
+                android:background="?colorAccent"
                 android:textColor="@color/white"
                 android:text="@string/btn_third_party_licenses"
                 android:fontFamily="@font/roboto_regular"/>
