--- a/app/src/main/res/layout/activity_suggestion.xml
+++ b/app/src/main/res/layout/activity_suggestion.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:fitsSystemWindows="true"
         android:clipToPadding="false"
-        android:background="@color/colorPrimary"
+        android:background="?colorPrimary"
         app:layout_scrollFlags="scroll|enterAlways"/>
 
     <TextView
@@ -56,7 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="36dp"
         android:layout_alignParentBottom="true"
-        android:background="@color/colorAccent"
+        android:background="?colorAccent"
         android:textColor="@color/white"
         android:layout_margin="16dp"
         android:text="@string/submit"/>
