--- a/app/src/main/res/layout/card_big_tray.xml
+++ b/app/src/main/res/layout/card_big_tray.xml
@@ -25,9 +25,10 @@
 
         <ImageView
             android:id="@+id/iv_image"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             app:srcCompat="@drawable/ic_food_black_24dp"
+            android:tint="?colorAccent"
             android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
