--- a/app/src/main/res/layout/card_calendar_option.xml
+++ b/app/src/main/res/layout/card_calendar_option.xml
@@ -21,9 +21,10 @@
 
         <ImageView
             android:id="@+id/ivCalendar"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             app:srcCompat="@drawable/ic_calendar_black_24dp"
+            android:tint="?colorAccent"
             android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
