--- a/app/src/main/res/layout/card_class_details_draft_class.xml
+++ b/app/src/main/res/layout/card_class_details_draft_class.xml
@@ -37,7 +37,7 @@
             android:textSize="14sp"
             android:layout_marginStart="72dp"
             android:layout_marginLeft="72dp"
-            android:textColor="@color/colorAccent"
+            android:textColor="?colorAccent"
             android:fontFamily="@font/roboto_medium"
             android:layout_centerInParent="true"
             android:text="@string/card_class_details_this_is_a_draft"/>
