--- a/app/src/main/res/layout/card_class_details_grades.xml
+++ b/app/src/main/res/layout/card_class_details_grades.xml
@@ -25,7 +25,7 @@
             android:textAlignment="center"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:textColor="@color/colorAccent"
+            android:textColor="?colorAccent"
             android:fontFamily="@font/roboto_medium"
             android:text="@string/title_grades"/>
 
