--- a/app/src/main/res/layout/card_discipline_classes.xml
+++ b/app/src/main/res/layout/card_discipline_classes.xml
@@ -93,7 +93,7 @@
                 android:layout_marginLeft="24dp"
                 android:layout_marginStart="24dp"
                 app:srcCompat="@drawable/ic_attach_file_black_24dp"
-                android:tint="@color/colorPrimary"/>
+                android:tint="?colorAccent"/>
 
             <TextView
                 android:id="@+id/tv_class_attachments"
