--- a/app/src/main/res/layout/card_experimental.xml
+++ b/app/src/main/res/layout/card_experimental.xml
@@ -23,7 +23,7 @@
             android:layout_height="36dp"
             android:layout_margin="16dp"
             app:srcCompat="@drawable/ic_experimental_black_24dp"
-            android:tint="@color/colorPrimary"/>
+            android:tint="?colorPrimary"/>
 
         <TextView
             android:layout_width="match_parent"
