--- a/app/src/main/res/layout/item_grade_discipline.xml
+++ b/app/src/main/res/layout/item_grade_discipline.xml
@@ -25,7 +25,7 @@
             android:fontFamily="@font/roboto_regular"
             android:textAlignment="center"
             android:gravity="center"
-            android:textColor="@color/colorAccent"
+            android:textColor="?colorAccent"
             tools:text="COD123 - Name"/>
 
         <android.support.v7.widget.RecyclerView
@@ -45,7 +45,7 @@
             android:fontFamily="@font/roboto_medium"
             android:textAlignment="center"
             android:gravity="center"
-            android:textColor="@color/colorPrimary"
+            android:textColor="?colorPrimary"
             android:text="@string/final_score_text"/>
 
         <TextView
@@ -61,7 +61,7 @@
             android:fontFamily="@font/roboto_medium"
             android:textAlignment="center"
             android:gravity="center"
-            android:textColor="@color/colorAccent"
+            android:textColor="?colorAccent"
             tools:text="10,0"/>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
