--- a/app/src/main/res/layout/item_grade_header.xml
+++ b/app/src/main/res/layout/item_grade_header.xml
@@ -13,7 +13,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:fontFamily="@font/roboto_medium"
-        android:textColor="@color/colorPrimary"
+        android:textColor="?colorPrimary"
         android:textSize="12sp"
         tools:text="Teórico - Prático"/>
 </RelativeLayout>
