--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.design.widget.AppBarLayout
         app:elevation="2dp"
@@ -25,8 +25,6 @@
             android:layout_height="wrap_content"
             app:tabMode="scrollable"
             android:visibility="gone"
-            android:background="@color/colorPrimary"
-            app:tabBackground="@color/colorPrimary"
             app:tabSelectedTextColor="@color/white">
         </android.support.design.widget.TabLayout>
     </android.support.design.widget.AppBarLayout>
