Possibility of Color Change Pt.2

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -38,7 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:layout_margin="8dp"
-                android:background="?colorAccent"
+                android:background="?attr/color_accent"
                 android:textColor="@color/white"
                 android:text="@string/btn_third_party_licenses"
                 android:fontFamily="@font/roboto_regular"/>
