--- a/app/src/main/res/drawable/button_rectangle_rounded.xml
+++ b/app/src/main/res/drawable/button_rectangle_rounded.xml
@@ -2,6 +2,6 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="?colorAccent"/>
+    <solid android:color="?attr/color_accent"/>
     <corners android:radius="4dp"/>
 </shape>
