--- a/app/src/main/res/layout/card_class_details_prev_and_next.xml
+++ b/app/src/main/res/layout/card_class_details_prev_and_next.xml
@@ -85,7 +85,7 @@
             android:id="@+id/tv_show_all_classes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="?colorAccent"
+            android:textColor="?attr/color_accent"
             android:fontFamily="@font/roboto_regular"
             android:layout_marginTop="16dp"
             android:layout_gravity="center_horizontal"
