--- a/app/src/main/res/layout/card_update_control.xml
+++ b/app/src/main/res/layout/card_update_control.xml
@@ -28,7 +28,7 @@
             android:layout_width="36dp"
             android:layout_height="36dp"
             app:srcCompat="@drawable/ic_sync_accent_30dp"
-            android:tint="?colorAccent"
+            android:tint="?attr/color_accent"
             android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
