--- a/app/src/main/res/layout/fragment_login_connecting.xml
+++ b/app/src/main/res/layout/fragment_login_connecting.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?colorPrimary"
+    android:background="?attr/color_primary"
     tools:context=".view.login.fragment.ConnectingFragment">
 
     <de.hdodenhof.circleimageview.CircleImageView
