--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="?colorPrimary">
+    android:background="?attr/color_primary">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -59,8 +59,6 @@
                 android:textSize="18sp"
                 android:fontFamily="@font/roboto_medium"/>
         </LinearLayout>
-
-
 
         <TextView
             android:id="@+id/tv_std_semester"
