--- a/app/src/main/res/layout/item_calendar.xml
+++ b/app/src/main/res/layout/item_calendar.xml
@@ -18,7 +18,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:fontFamily="@font/roboto_medium"
-        android:textColor="?colorPrimary"
+        android:textColor="?attr/color_primary"
         tools:text="22/12 a 24/12"/>
 
     <TextView
