--- a/app/src/main/res/layout/item_disciplines_discipline.xml
+++ b/app/src/main/res/layout/item_disciplines_discipline.xml
@@ -20,7 +20,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         app:srcCompat="@drawable/ic_download_black_24dp"
-        android:tint="?colorPrimary"
+        android:tint="?attr/color_primary"
         android:contentDescription="@string/draft_class"/>
 
     <RelativeLayout
