--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
 
     <color name="colorPrimaryForce1">#9C27B0</color>
     <color name="colorPrimaryDarkForce1">#7B1FA2</color>
-    <color name="colorPrimaryLightForce1">#E1BEE7</color>
+    <color name="colorPrimaryLightForce1">#9575cd</color>
     <color name="colorAccentForce1">#FFC107</color>
 
     <color name="colorPrimaryForce2">#607D8B</color>
