--- a/app/src/main/res/xml-v26/preferences.xml
+++ b/app/src/main/res/xml-v26/preferences.xml
@@ -81,12 +81,6 @@
             android:title="@string/pref_palette"/>
 
         <Preference
-            android:icon="@drawable/ic_gamepad_variant_accent_30dp"
-            android:key="unes_the_adventure_connect"
-            android:title="@string/pref_unes_the_adventure"
-            android:summary="@string/pref_unes_the_adventure_desc"/>
-
-        <Preference
             android:icon="@drawable/ic_calendar_range_accent_30dp"
             android:key="export_to_google_calendar"
             android:title="@string/export_classes_to_google_calendar"
@@ -97,6 +91,22 @@
             android:key="reset_calendar_export"
             android:title="@string/remove_google_calendar_export"
             android:summary="@string/remove_google_calendar_export_desc"/>
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/pref_header_unes_adventure">
+
+        <Preference
+            android:icon="@drawable/ic_gamepad_variant_accent_30dp"
+            android:key="unes_the_adventure_connect"
+            android:title="@string/pref_unes_the_adventure"
+            android:summary="@string/pref_unes_the_adventure_desc"/>
+
+        <Preference
+            android:icon="@drawable/ic_block_accent_30dp"
+            android:key="unes_the_adventure_disconnect"
+            android:title="@string/pref_unes_the_adventure_logout"
+            android:summary="@string/pref_unes_the_adventure_logout_desc"/>
     </PreferenceCategory>
 
     <PreferenceCategory
@@ -117,12 +127,6 @@
             android:defaultValue="true"
             android:summaryOff="@string/pref_do_not_show_semester"
             android:summaryOn="@string/pref_do_show_semester"/>
-
-        <Preference
-            android:icon="@drawable/ic_gamepad_variant_accent_30dp"
-            android:key="unes_the_adventure_disconnect"
-            android:title="@string/pref_unes_the_adventure_logout"
-            android:summary="@string/pref_unes_the_adventure_logout_desc"/>
 
         <Preference
             android:icon="@drawable/ic_logoff_accent_30dp"
