--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -36,6 +36,8 @@
 
     <color name="android_green">#A4C639</color>
 
+    <color name="nav_icon_color">#757575</color>
+
     <color name="dis_01">#18ffff</color>
     <color name="dis_02">#64dd17</color>
     <color name="dis_03">#f5bf8a</color>
